--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -364,7 +364,7 @@
          </sizepolicy>
         </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="tab2a">
          <attribute name="title">
@@ -487,10 +487,13 @@
                 <item>
                  <widget class="QSlider" name="sliderMinThreshold">
                   <property name="minimum">
-                   <number>1</number>
+                   <number>0</number>
                   </property>
                   <property name="maximum">
                    <number>1000</number>
+                  </property>
+                  <property name="singleStep">
+                   <number>1</number>
                   </property>
                   <property name="tracking">
                    <bool>false</bool>
@@ -503,7 +506,7 @@
                 <item>
                  <widget class="QSlider" name="sliderMaxThreshold">
                   <property name="minimum">
-                   <number>1</number>
+                   <number>0</number>
                   </property>
                   <property name="maximum">
                    <number>1000</number>
