--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>481</width>
-    <height>840</height>
+    <height>977</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -364,7 +364,7 @@
          </sizepolicy>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab2a">
          <attribute name="title">
@@ -725,6 +725,20 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="checkBoxLocked">
+            <property name="text">
+             <string>Lock</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QCheckBox" name="checkBoxScalingLinear">
+            <property name="text">
+             <string>Linear Scaling</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="buttonSphere">
             <property name="text">
              <string>Map Uncertainty to Sphere Texture</string>
@@ -764,6 +778,65 @@
            </widget>
           </item>
           <item>
+           <widget class="QGroupBox" name="groupBox">
+            <property name="title">
+             <string>Scaling</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_15">
+             <item>
+              <widget class="QRadioButton" name="radioButtonScalingNone">
+               <property name="text">
+                <string>none</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="radioButtonScalingLinear">
+               <property name="text">
+                <string>TODO: linear</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="radioButtonScalingHistogram">
+               <property name="text">
+                <string>TODO: histogram equalisation</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
+           <widget class="QGroupBox" name="groupBox_2">
+            <property name="title">
+             <string>Colour</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_16">
+             <item>
+              <widget class="QRadioButton" name="radioButtonColourBlackAndWhite">
+               <property name="text">
+                <string>black &amp; white</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="radioButtonColourColour">
+               <property name="text">
+                <string>TODO: colour</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item>
            <widget class="QPushButton" name="buttonSurfaceMapping">
             <property name="text">
              <string>Map to Surface</string>
@@ -797,14 +870,14 @@
              <item>
               <widget class="QPushButton" name="buttonCubeSurface">
                <property name="text">
-                <string>Cube</string>
+                <string>TODO: Cube</string>
                </property>
               </widget>
              </item>
              <item>
-              <widget class="QPushButton" name="buttonTODOSurface">
+              <widget class="QPushButton" name="buttonCylinderSurface">
                <property name="text">
-                <string>TODO</string>
+                <string>TODO: Cylinder</string>
                </property>
               </widget>
              </item>
