Histogram equalization is behaving quite strangely. Why couldn't it be simple. It might be getting confused because we're using doubles. This means we're going to have to convert the double list to a char list. Joy. Hope it works.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -1038,6 +1038,19 @@
     </widget>
    </item>
    <item>
+    <widget class="QDoubleSpinBox" name="double1"/>
+   </item>
+   <item>
+    <widget class="QDoubleSpinBox" name="double2"/>
+   </item>
+   <item>
+    <widget class="QSpinBox" name="int1">
+     <property name="maximum">
+      <number>9999</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QWidget" name="widget3Container" native="true">
      <layout class="QVBoxLayout" name="verticalLayout_8">
       <property name="topMargin">
