Added in half way sampling (uses int1 for percentage), changed normalization to map chars from 0-255 to 0-1 rather than min-max to 0-1. (This way the 1 at the center of the sphere uncertainty is not treated as an error)

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>413</width>
-    <height>1145</height>
+    <height>1277</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -933,6 +933,9 @@
               <widget class="QRadioButton" name="radioButtonSamplingFull">
                <property name="text">
                 <string>full</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
