Volume rendering finally does something. Following the documentation online doesn't appear to make it work so I've copied the properties that the Volume Visualisation plugin generates by trial and error.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -205,6 +205,13 @@
            </property>
           </widget>
          </item>
+         <item>
+          <widget class="QPushButton" name="buttonDebug1">
+           <property name="text">
+            <string>VR</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </widget>
       </item>
