--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -750,7 +750,7 @@
             </sizepolicy>
            </property>
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="tab3a">
             <attribute name="title">
@@ -1153,29 +1153,71 @@
               </widget>
              </item>
              <item>
-              <widget class="QGroupBox" name="groupBox_4">
-               <property name="title">
-                <string>Scaling</string>
-               </property>
-               <layout class="QVBoxLayout" name="verticalLayout_17">
-                <property name="bottomMargin">
-                 <number>0</number>
-                </property>
-                <item>
-                 <widget class="QRadioButton" name="radioButtonTextureScalingNone">
-                  <property name="text">
-                   <string>none</string>
+              <widget class="QWidget" name="widget_3" native="true">
+               <layout class="QGridLayout" name="gridLayout_4">
+                <item row="0" column="1">
+                 <widget class="QGroupBox" name="groupBox_5">
+                  <property name="title">
+                   <string>Sample</string>
                   </property>
-                  <property name="checked">
-                   <bool>true</bool>
-                  </property>
+                  <layout class="QVBoxLayout" name="verticalLayout_18">
+                   <property name="bottomMargin">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QRadioButton" name="radioButtonTextureSampleAverage">
+                     <property name="text">
+                      <string>average</string>
+                     </property>
+                     <property name="checked">
+                      <bool>true</bool>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QRadioButton" name="radioButtonTextureSampleMinimum">
+                     <property name="text">
+                      <string>min</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QRadioButton" name="radioButtonTextureSampleMaximum">
+                     <property name="text">
+                      <string>max</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
                  </widget>
                 </item>
-                <item>
-                 <widget class="QRadioButton" name="radioButtonTextureScalingLinear">
-                  <property name="text">
-                   <string>linear</string>
+                <item row="0" column="0">
+                 <widget class="QGroupBox" name="groupBox_4">
+                  <property name="title">
+                   <string>Scaling</string>
                   </property>
+                  <layout class="QVBoxLayout" name="verticalLayout_17">
+                   <property name="bottomMargin">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QRadioButton" name="radioButtonTextureScalingNone">
+                     <property name="text">
+                      <string>none</string>
+                     </property>
+                     <property name="checked">
+                      <bool>true</bool>
+                     </property>
+                    </widget>
+                   </item>
+                   <item>
+                    <widget class="QRadioButton" name="radioButtonTextureScalingLinear">
+                     <property name="text">
+                      <string>linear</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
                  </widget>
                 </item>
                </layout>
