Added CTK to dependencies as well as QT things. Might have fixed dependency problems - will check on lab machine later.

--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -1695,7 +1695,7 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_24">
           <item>
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="buttonReconstructGUI">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
               <horstretch>0</horstretch>
